# vinylid-ml

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/rules/: copilot-review.md  python-ml.md  testing.md
.claude/skills/code-review/: SKILL.md
.claude/skills/ml-performance/: SKILL.md
.claude/skills/ml-quality/: SKILL.md
.github/: copilot-instructions.md
.github/instructions/: python-ml.instructions.md  testing.instructions.md
.github/skills/code-review/: SKILL.md
.github/skills/ml-quality/: SKILL.md
.skills/ml-performance/: SKILL.md
.skills/python-ml-standards/: SKILL.md
configs/: dataset-remote.yaml  dataset.yaml  models.yaml
docs/: conclusions.md
docs/state/: registry.md
docs/state/epics/: 13-c2-local-features.md  15-phone-photo-eval.md  19-b3-sscd-supcon.md  20-d1-hybrid.md  21-k-sweep.md  22-cross-category-report.md  23-hf-hub-push.md  53-phone-sample-comparison.md  sprint4-accuracy-push.md  sprint4-coreml-e2e.md
results/: comparison.csv  comparison.html  latency_summary.csv  multi_context_comparison.csv  multi_context_comparison.html  phone_eval_summary.csv  phone_sample_eval_summary.csv  summary.csv
results/A1-dinov2-cls-518/2026-03-14T22-59-08/: calibration.csv  config.json  metrics.json  nn_ambiguity.csv  per_query.csv  report.html
results/A1-dinov2-cls-phone-sample/2026-04-04T00-57-21/: config.json  metrics.json
results/A1-dinov2-cls/2026-03-14T22-54-54/: calibration.csv  config.json  metrics.json  nn_ambiguity.csv  per_query.csv  report.html
results/A1-dinov2-gem-518/2026-03-14T23-02-06/: calibration.csv  config.json  metrics.json  nn_ambiguity.csv  per_query.csv  report.html
results/A1-dinov2-gem-phone-sample/2026-04-04T00-57-21/: config.json  metrics.json
results/A1-dinov2-gem/2026-03-14T22-56-04/: calibration.csv  config.json  metrics.json  nn_ambiguity.csv  per_query.csv  report.html
results/A2-openclip-phone-sample/2026-04-04T00-57-21/: config.json  metrics.json
results/A2-openclip/2026-03-14T23-03-17/: calibration.csv  config.json  metrics.json  nn_ambiguity.csv  per_query.csv  report.html
results/A3-featureprint-phone/2026-04-04T02-36-27/: config.json  metrics.json
results/A3-featureprint/2026-03-14T23-48-28/: calibration.csv  config.json  metrics.json  nn_ambiguity.csv  per_query.csv  report.html
results/A4-sscd-aqe5a0.5-phone/2026-04-04T02-39-54/: config.json  metrics.json
results/A4-sscd-phone-sample/2026-04-04T00-57-21/: config.json  metrics.json
results/A4-sscd-tta5-aqe5a0.5-phone/2026-04-04T02-41-49/: config.json  metrics.json
results/A4-sscd-tta5-phone/2026-04-04T02-37-24/: config.json  metrics.json
results/A4-sscd/2026-03-14T23-04-25/: calibration.csv  config.json  metrics.json  nn_ambiguity.csv  per_query.csv  report.html
results/A5-sscd-blur-phone/2026-04-04T02-45-55/: config.json  metrics.json
results/B1-mobilenet_v3_small-supcon/2026-03-21T22-01-09/: config.json  metrics.json  training_log.json
results/B1-mobilenet_v3_small-supcon/2026-03-21T22-03-32/: config.json  metrics.json  training_log.json
results/B1-mobilenet_v3_small-supcon/2026-03-22T00-15-57/: calibration.csv  config.json  metrics.json  nn_ambiguity.csv  per_query.csv  report.html
results/B2-dinov2-supcon/2026-03-28T20-17-32/: config.json
results/B2-dinov2-supcon/2026-03-28T20-19-37/: config.json
results/B2-dinov2-supcon/2026-03-28T20-20-41/: config.json  metrics.json  training_log.json
results/B2-dinov2-supcon/2026-03-28T21-41-35/: calibration.csv  config.json  metrics.json  nn_ambiguity.csv  (+2 more)
scripts/: analyse_failures.py  augment_queries.py  compare_models.py  embed_featureprint.py  embed_finetuned.py  embed_gallery.py  evaluate.py  evaluate_local_features.py  evaluate_patch_matching.py  evaluate_phone_photos.py  prepare_dataset.py  push_to_hub.py  run_zero_shot_eval.py  strip_metadata.py  train.py  train_projection_head.py
src/vinylid_ml/: __init__.py  apple_featureprint.py  dataset.py  eval_metrics.py  exif.py  gallery.py  local_features.py  losses.py  models.py  patch_matching.py  projection.py  report.py  training.py
tests/: conftest.py  test_apple_featureprint.py  test_compare_models.py  test_embed_finetuned.py  test_eval_metrics.py  test_evaluate.py  test_evaluate_phone_photos.py  test_exif.py  test_gallery.py  test_local_features.py  test_losses.py  test_models.py  test_patch_matching.py  test_projection.py  test_report.py  test_run_zero_shot_eval.py  test_strip_metadata.py  test_training.py
(+78 files in other folders)
